# ros1_example_aws

./: README.md
doc/: Untitled Diagram  ansible.drawio
inventories/: example_inventory
machines/Basestation/: build.sh  install-requirements.sh  reset.sh  start.sh
machines/Quadcopter/: build.sh  start.sh
machines/Quadcopter/ros_ws/src/bringup/: CMakeLists.txt  package.xml
machines/Quadcopter/ros_ws/src/bringup/launch/: default.launch
playbooks/: mission.yml  mission_stop.yml  reboot.yml  set_hostname_to_inventory_file.yml  setup_twins_drones.yml  shutdown.yml
playbooks/tasks/: proj_set_variables.yml
